# rsomics-het-tests

./: Cargo.toml  README.md
benches/: het.rs
src/: breuschpagan.rs  cli.rs  igamc.rs  incbet.rs  io.rs  lib.rs  ols.rs  result.rs  white.rs
tests/: compat.rs
tests/golden/: const_resid.tsv  expected.tsv  n200_k5_hetero.tsv  n5000_k4_homo.tsv  n5000_k5_hetero.tsv  n500_k3_homo.tsv  n500_k4_hetero.tsv  n50_k2_hetero.tsv  n50_k2_homo.tsv  n50_k3_hetero.tsv  white_rankdef.tsv
