[package]
name = "rsomics-het-tests"
version = "0.1.0"
description = "Breusch-Pagan (Koenker) and White Lagrange-multiplier tests for heteroscedasticity on OLS residuals — value-exact statsmodels het_breuschpagan / het_white equivalent"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-het-tests"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["statistics", "heteroscedasticity", "breusch-pagan", "white", "statsmodels"]
readme = "README.md"

[[bin]]
name = "rsomics-het-tests"
path = "src/main.rs"

[lib]
name = "rsomics_het_tests"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
fast-float2 = "0.2"
libm = "0.2"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"
tempfile = "3"

[[bench]]
name = "het"
harness = false
